Add mockito testcases